tests/snapshots/bundle_rules@min_ergonomics-Expression.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: min_ergonomics
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: Error
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Error
---
p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1]

[p0, p1] @ &**e: &T
------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T

p @ *e: T
-------------------------------- "Deref"
&p @ e: &T, e is not a reference

p @ *e: T
---------------------------------------- "Deref"
&mut p @ e: &mut T, e is not a reference

x @ &e: &T
---------------------------------- "BindingBorrow"
ref x @ e: T, e is not a reference

x @ &mut e: &mut T
-------------------------------------- "BindingBorrow"
ref mut x @ e: T, e is not a reference


-------- "Binding"
x @ e: T


---------------------------------- "Binding"
mut x @ e: T, e is not a reference
