tests/snapshots/bundle_rules@nadri-BindingMode.snap
---
source: src/compute_rules.rs
info:
  bundle_name: nadri
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Keep
    always_inspect_bm: false
---
p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1]

[p0, p1] @ &**e: &T
------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T

p @ *e: T
---------- "Deref"
&p @ e: &T

p @ *e: T
------------------ "Deref"
&mut p @ e: &mut T

p @ *&*e: T
-------------- "DerefMutWithShared"
&p @ e: &mut T

x @ &e: &T
------------------------------------ "BindingBorrow"
ref x @ e: T, binding_mode(e) = move

x @ &mut e: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ e: T, binding_mode(e) = move


-------- "Binding"
x @ e: T


------------ "Binding"
mut x @ e: T
